positions-service/kubernetes/ingress/ingress-conf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trading-system-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - trading-platform.com
      secretName: trading-platform-tls
  ingressClassName: nginx
  rules:
    - host: trading-platform.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /positions(/|$)(.*)
            backend:
              service:
                name: positions-service
                port:
                  name: http
